agnostics/gateway/aws/base/internal-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # No need to specifiy certificate, ALB automatically looks up the available
    # ACM certificates to find one that matches the ingress host
    # alb.ingress.kubernetes.io/certificate-arn:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: instance
    external-dns.alpha.kubernetes.io/hostname: "*.${DOMAIN}"
  name: internal-gateway-ingress
  namespace: gateway
spec:
  ingressClassName: alb
  rules:
  - host: "*.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: cilium-gateway-internal-gateway
            port:
              number: 80
        path: /
        pathType: Prefix
